# hsds_server_client

./: README.md
hsds_client/: pyproject.toml  requirements.txt  setup.py  upload_wheel_via_twine.ps1
hsds_client/hsds_client/: __init__.py  cli.py  config.py  core.py
hsds_client/hsds_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hsds_client/wheels/: h5pyd-0.21.0-py3-none-any.whl  requests_unixsocket-0.4.1-py3-none-any.whl
hsds_installer/: install.ps1  requirements.txt  trace_path.json  watchdog_service.py
hsds_installer/hsds/admin/dcos/: dcos_dn.json  dcos_headnode.json  dcos_sn.json
hsds_installer/hsds/docs/: docker_install_dcos.md
hsds_installer/hsds/hsds/: config.py
hsds_installer/hsds/hsds/util/: authUtil.py
hsds_installer/hsds/hsds_data/hsdstest/home/: .domain.json
hsds_installer/hsds/hsds_data/hsdstest/home/admin/: .domain.json
